--- a/StudySiba/src/main/webapp/resources/css/messenger.css
+++ b/StudySiba/src/main/webapp/resources/css/messenger.css
@@ -8,7 +8,7 @@
 #message_body {
 	height: 500px;
 	overflow-y: scroll;
-    background-color: #b2c7d9;    
+	background-color: #b2c7d9;
 }
 
 #message_footer {
@@ -34,7 +34,8 @@
 
 #message_img {
 	width: 60px;
-	height: 60px
+	height: 60px;
+	margin-top: 10px;
 }
 
 #message_time {
@@ -45,7 +46,6 @@
 	height: 500px;
 	width: 200px;
 	overflow-y: scroll;
-    
 }
 
 .message_listimage {
@@ -59,18 +59,20 @@
 }
 
 #message_state {
-    width: 20px;
-    height: 20px;
-    border-radius: 20px;
-    position: absolute;
-    left: 1.5%;
-    top: 0%;
+	width: 20px;
+	height: 20px;
+	border-radius: 20px;
+	position: absolute;
+	left: 1.5%;
+	top: 0%;
 }
 
 #message_btn {
 	position: absolute;
 	right: 12px;
 	bottom: 10px;
+	font-weight: bold;
+	color: black;
 }
 
 .message_defaulttext {
@@ -91,21 +93,21 @@
 }
 
 #message_readcount {
-    width: 20px;
-    height: 20px;
-    border-radius: 20px;
-    background-color: red;
-    position: absolute;
-    left: 36%;
-    top: 50%;
+	width: 20px;
+	height: 20px;
+	border-radius: 20px;
+	background-color: red;
+	position: absolute;
+	left: 36%;
+	top: 50%;
 }
 
 #message_readtext {
-    position: absolute;
-    left: 30%;
-    bottom: -13%;
-    font-weight: bold;
-    color: white;
+	position: absolute;
+	left: 30%;
+	bottom: -13%;
+	font-weight: bold;
+	color: white;
 }
 
 .message_alarm {
@@ -146,20 +148,12 @@
 }
 
 #message_title span {
+	display: block;
+	float: left;
+	margin-left: 12px;
+	margin-top: 1px;
 	font-weight: bold;
 	font-size: 1.28rem;
-}
-
-#message_title img {
-	width: 30px;
-	height: 30px;
-	float: right;
-	margin-right: 3%;
-	cursor: pointer;
-}
-
-#message_title img:nth-of-type(2) {
-	margin-right: 5%;
 }
 
 .message_waste {
@@ -171,122 +165,167 @@
 	margin-top: 10px;
 }
 
-.message_commentwarp{
-    padding-bottom: 10px;
+.message_commentwarp {
+	padding-bottom: 10px;
 }
 
-.message_imgwarp, .message_commentbox_other{
-    float: left;
+.message_imgwarp, .message_commentbox_other {
+	float: left;
 }
+
 .message_nick {
-    margin: 0;
-    margin-left: 15px;
-    width: 70px;
-    height: 30px;
-    overflow: hidden;
-    text-align: center;
+	margin: 0;
+	margin-left: 15px;
+	width: 70px;
+	height: 20px;
+	overflow: hidden;
+	text-align: center;
 }
 
-.message_nickname{
-    margin: 0;
-    width: 70px;
-    height: 30px;
-    overflow: hidden;
-    text-align: center;
-    font-weight: bold;
+.message_nickname {
+	margin: 0;
+	width: 70px;
+	height: 30px;
+	overflow: hidden;
+	text-align: center;
+	font-weight: bold;
 }
-.message_commentbox_other{
-    width: 80%;
-    min-height: 60px;
-    vertical-align: middle
+
+.message_commentbox_other {
+	width: 80%;
+	min-height: 60px;
+	vertical-align: middle
 }
+
 .message_commentbox_other p {
-    padding: 0;
-    margin: 0;
+	padding: 0;
+	margin: 0;
 }
 
-.message_imgwarp_me , .message_commentbox_me {
-    float: right;
+.message_imgwarp_me, .message_commentbox_me {
+	float: right;
 }
-.message_commentbox_me{
-    width: 80%;
-    min-height: 60px;
-    vertical-align: middle
+
+.message_commentbox_me {
+	width: 80%;
+	min-height: 60px;
+	vertical-align: middle
 }
+
 .message_commentbox_me p {
-    padding: 0;
-    margin: 0;
+	padding: 0;
+	margin: 0;
 }
 
 .message_nick p:nth-of-type(1) {
-    font-weight: bold;
-    font-size: 0.9rem;
+	font-weight: bold;
+	font-size: 0.9rem;
 }
+
 .message_baloon {
-    position: relative;
-    margin-left: 15px;
-    background-color: white;
-    min-height: 36px;
-    width: 250px;
-    border-radius: 5px;
-    padding: 10px;
-    padding-left: 20px;
+	position: relative;
+	margin-left: 15px;
+	background-color: white;
+	min-height: 36px;
+	width: 250px;
+	border-radius: 5px;
+	padding: 10px;
+	padding-left: 20px;
 }
 
 .message_baloon::before {
-    content: '';
-    position: absolute;
-    left: -10px;
-    top: 20px;
-    border-right: 10px solid white;
-    border-top: 0px solid transparent;
-    border-bottom: 10px solid transparent;
-}
-.message_nick_me{
-    vertical-align: right;
-}
-.message_nick_me p{
-    font-weight: bold;
-    font-size: 0.9rem;
-    float: right;
-    margin-right: 28px;
-}
-.message_baloon_me{
-    position: relative;
-    text-align: right;
-    margin-right: 50px;
-    background-color: #ffeb33;
-    min-height: 36px;
-    width: 240px;
-    border-radius: 5px;
-    padding: 10px;
-    padding-right: 20px;
+	content: '';
+	position: absolute;
+	left: -10px;
+	top: 20px;
+	border-right: 10px solid white;
+	border-top: 0px solid transparent;
+	border-bottom: 10px solid transparent;
 }
 
-.message_baloon_me::before{
-    content: '';
-    position: absolute;
-    right: -10px;
-    top: 20px;
-    border-left: 10px solid #ffeb33;
-    border-top: 0px solid transparent;
-    border-bottom: 10px solid transparent;
+.message_nick_me {
+	vertical-align: right;
 }
 
-.message_date{
-    float: right;
+.message_nick_me p {
+	font-weight: bold;
+	font-size: 0.9rem;
+	float: right;
+	margin-right: 28px;
+}
+
+.message_baloon_me {
+	position: relative;
+	text-align: right;
+	margin-right: 50px;
+	background-color: #ffeb33;
+	min-height: 36px;
+	width: 240px;
+	border-radius: 5px;
+	padding: 10px;
+	padding-right: 20px;
+}
+
+.message_baloon_me::before {
+	content: '';
+	position: absolute;
+	right: -10px;
+	top: 20px;
+	border-left: 10px solid #ffeb33;
+	border-top: 0px solid transparent;
+	border-bottom: 10px solid transparent;
+}
+
+.message_date {
+	float: right;
 }
 
 .message_date p, .message_date_me p {
-    font-weight: bold;
-    font-size: 0.8rem;
+	font-weight: bold;
+	font-size: 0.7rem;
 }
 
-.message_date_me{
-    float: left;
+.message_date_me {
+	float: left;
 }
-.message_padding{
-    padding-bottom: 15px;
+
+.message_padding {
+	padding-bottom: 15px;
+}
+
+.message_userInfo {
+	float: left;
+	width: 220px;
+}
+
+.message_functionbtn {
+	float: right;
+	width: 108px;
+	margin-top: 1px;
+}
+
+.message_functionbtn img {
+	width: 30px;
+	height: 30px;
+	cursor: pointer;
+}
+
+.message_functionbtn img:nth-of-type(1) {
+	margin-left: 30px;
+	margin-right: 12px;
+}
+
+.message_userimage {
+	width: 40px;
+	height: 40px;
+	vertical-align: middle;
+	margin-top: -4px;
+	float: left;
+}
+
+.message_defaultmessage {
+	 text-align: center;
+	 font-weight: bold;
 }
 
 /* input[type='text'] , input[type='mail'], input[type='password'] {
@@ -339,11 +378,12 @@ div#message_rotate {
 }
 
 .bg-custom {
-	background-color: #117a8b !important;
+	background-color: #658cad !important;
 }
 
-#message_modal_layout, #memberModal, #qr_modal_layout {
+#message_modal_layout {
 	top: 10%;
+	left: -1.5%;
 }
 
 #searchModal, #friendModal {
