--- a/StudySiba/src/main/webapp/resources/css/main.css
+++ b/StudySiba/src/main/webapp/resources/css/main.css
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Nanum Gothic', sans-serif;
+    background-color: #f4f5f7;
 }
 
 .modal-nopadding {
@@ -134,7 +135,7 @@ ul.navbar-nav > li.nav-item {
     float: left;
     width: 16%;
     min-height: 70%;
-    border: 1px solid #b3b3b3;
+    border: 1px solid transparent;
     background-color: white;
     border-radius: 15px;
     margin-top: 3%;
