업데이트 : 메인 접속자 현황 버튼 ( 메세지, 친구추가 ) 구현 및 접속현황로그 갱신

--- a/StudySiba/src/main/webapp/resources/css/main.css
+++ b/StudySiba/src/main/webapp/resources/css/main.css
@@ -859,3 +859,16 @@ ul.navbar-nav > li.nav-item {
     background-color: #213c6f;
     border-color: #213c6f;
 }
+
+.modal_menu:hover{
+	background-color: #fecc84;
+}
+
+.passmodal_locate{
+	top: 12rem;
+    left: 5.5rem;
+}
+
+.content_user, .content_rankimage{
+	border-radius: 5px;
+}
