업데이트 : 자유게시판 리스트 페이징 처리 구현

--- a/StudySiba/src/main/webapp/resources/css/sub.css
+++ b/StudySiba/src/main/webapp/resources/css/sub.css
@@ -700,6 +700,7 @@ ul {
 .view_like:hover, .view_like:hover span{
     background-color: rgba(199, 75, 53, 1);
     color: white;
+    cursor: pointer;
 }
 
 .view_like img{
