--- a/StudySiba/src/main/webapp/resources/css/sub.css
+++ b/StudySiba/src/main/webapp/resources/css/sub.css
@@ -862,3 +862,91 @@ ul {
     font-weight: bold;
 }
 
+.study_modallayout{
+    width: 1000px;
+    height: auto;
+    left: -210px;
+    top: 50px;
+}
+
+.study_modalimg{
+	margin: 2px 20px 0 10px;
+}
+
+.study_modaltitle{
+    font-weight: bold;
+}
+
+.study_modalbody{
+    height: 710px;
+    padding: 30px;
+}
+
+.study_bodytop{
+    width: 100%;
+    height: 380px;
+}
+
+.study_bodybottom{
+    width: 100%;
+    height: 270px;
+}
+
+.bodytop_inputs{
+    width: 50%;
+    height: 100%;
+}
+
+.bodytop_locate{
+    width: 50%;
+    height: 100%;
+    padding: 0 0 0 30px;
+}
+
+.bodytop_inputs, .bodytop_locate{
+    float: left;
+}
+
+#map{
+    width: 100%;
+    height: 75%;
+}
+
+#pac-input{
+    width: 192px;
+    margin-top: 11px;
+}
+
+.pac-container{
+    z-index: 9999;
+}
+
+.inputs_image{
+    height: 110px;
+    text-align: right;
+}
+
+.inputs_file{
+    border: 1px solid #ced4da;
+    width: 468px;
+    height: 80px;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.inputs_image img{
+    width: 150px;
+    height: 68px;
+    border-radius: 10px;
+    margin-top: 33px;
+    margin-left: -45px;
+}
+
+.inputs_title{
+    width: 940px;
+}
+
+.study_registerbtn{
+    margin-right: 17px;
+}
+
