--- a/StudySiba/src/main/webapp/resources/css/sub.css
+++ b/StudySiba/src/main/webapp/resources/css/sub.css
@@ -1066,6 +1066,7 @@ ul {
     border-radius: 15px;
     background-color: white;
     text-align: center;
+    cursor: pointer;
 }
 
 .roomfooter_info img{
@@ -1077,9 +1078,95 @@ ul {
 .roomfooter_info p{
     margin: 0;
     font-weight: bold;
+    font-size: 0.9rem;
 }
 
 .roomfooter_info span{
     color: darkcyan;
     font-weight: bold;
+}
+
+
+
+
+/*
+ *   그룹 리스트 뷰
+*/
+
+.content_group{
+    padding: 15px 70px 20px 70px;
+}
+
+.contentgroup_list{
+    border: 1px solid #ccc;
+    height: 100px;
+    border-radius: 15px;
+    background-color: white;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.contentgroup_groupimg img{
+    width: 80%;
+    height: 100%;
+    margin-left: 20%;
+}
+
+.contentgroup_divide{
+    padding: 12px 0 0 0;
+    margin-left: 40px;
+}
+
+.contentgroup_divide div{
+	margin-bottom: 10px;
+}
+
+.contentgroup_divide img{
+    width: 25px;
+    height: 25px;
+    margin-top: 5px;
+}
+
+.contentgroup_divide span{
+    margin-left: 8px;
+    margin-top: 8px;
+    font-weight: bold;
+    font-size: 0.9rem;
+    
+}
+
+.contentgroup_info{
+    margin-left: 30px;
+}
+
+.contentgroup_info img{
+    width: 25px;
+    height: 25px;
+}
+
+.contentgroup_info span{
+    font-weight: bold;
+    font-size: 0.8rem;
+    margin-left: 10px;
+    margin-top: 6px;
+}
+
+.contentgroup_info div{
+    margin-top: 6px;
+}
+
+.contentgroup_joiner{
+    text-align: center;
+    padding-top: 35px;
+}
+
+.contentgroup_joiner img{
+    width: 32px;
+    height: 32px;
+    margin-right: 10px;
+}
+
+.contentgroup_joiner {
+    font-weight: bold;
+    font-size: 0.8rem;
 }
