--- a/StudySiba/src/main/webapp/resources/css/sub.css
+++ b/StudySiba/src/main/webapp/resources/css/sub.css
@@ -1170,3 +1170,230 @@ ul {
     font-weight: bold;
     font-size: 0.8rem;
 }
+
+
+
+
+
+/*
+ *  스터디 그룹 뷰
+*/
+
+.group_warp{
+    margin-top: 30px;
+    padding: 0 50px 0 50px;
+}
+
+.group_title img{
+    width: 60px;
+    height: 60px;
+}
+
+.group_title span{
+    color: darkcyan;
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin: 13px 0 0 20px;
+}
+
+.group_ltwarp, .group_lbwarp {
+    border: 1px solid #ccc;
+    height: 250px;
+    border-radius: 20px;
+    background-color: white;
+}
+
+.group_rtwarp{
+    height: 520px;
+}
+
+.group_messenger{
+    width: 90%;
+    height: 100%;
+    float: right;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    background-color: white;
+}
+
+.messenger_top{
+    border-bottom: 1px solid #ccc;
+    height: 60px;
+    width: 100%;
+    margin-left: 0.1%;
+    padding: 15px 0 0 20px;
+    background-color: #6cc56c;
+    border-radius: 20px 20px 0 0;
+}
+
+.messenger_top img{
+    width: 32px;
+    height: 32px;
+}
+
+.messenger_top span{
+    font-weight: bold;
+    font-size: 1.2rem;
+    margin-left: 20px;
+    color: white;
+}
+
+.messenger_body{
+    margin-left: 0.5px;
+    width: 100%;
+    height: 389px;
+    overflow-y: scroll;
+}
+
+.messenger_footer{
+    margin-left: 0.5px;
+    width: 100%;
+    height: 70px;
+    border-radius: 0 0 20px 20px;
+    background-color: #6cc56c;
+}
+
+.messenger_footer input {
+    height: 40px;
+    width: 290px;
+    padding: 5px 10px 5 10px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    margin: 15px 0 0 25px;
+}
+
+.messenger_footer button {
+    height: 40px;
+    width: 80px;
+    padding: 5px 10px 5 10px;
+    margin: 15px 0 0 10px;
+}
+
+.messenger_message{
+    height: 50px;
+    width: 95%;
+    margin: 10px 0 0 20px;
+    padding-bottom: 60px;
+    border-bottom: 1px solid #ccc;
+}
+
+.messenger_message img{
+    width: 50px;
+    height: 50px;
+    float: left;
+}
+
+.messeger_messagewarp{
+    float: left;
+}
+
+.messenger_messagetop{
+    width: 330px;
+    height: 30px;
+}
+
+.messenger_messagetop div:nth-of-type(1){
+    float: left;
+    margin-left: 15px;
+    font-weight: bold;
+}
+
+.messenger_messagetop div:nth-of-type(2){
+    float: right;
+    margin-right: 10px;
+    font-weight: bold;
+    font-size: 0.9rem;
+}
+
+.messenger_messagebottom{
+    margin-left: 15px;
+    font-size: 0.8rem;
+}
+
+.lbwarp_top{
+    width: 100%;
+    height: 50px;
+}
+
+.lbwarp_top button{
+    float: right;
+    margin: 15px 35px 0 0;
+}
+
+.lbwarp_title{
+    font-weight: bold;
+    padding-bottom: 6px;
+    border-bottom: 1px solid black;
+    width: 80px;
+    margin: 17px 0 0 30px;
+    float: left;
+}
+
+.lbwarp_bottom{
+    height: 180px;
+    width: 100%;
+    padding: 10px 50px 0 50px;
+    
+}
+
+.lbwarp_title span{
+    margin-left: 4px;
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+.lbwarp_list{
+    border: 1px solid #ccc;
+    width: 100%;
+    height: 35px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.ltwarp_map{
+    padding: 20px 15px 15px 15px;
+}
+
+.ltwrp_mapview{
+    height: 210px;
+    width: 210px;
+    margin-left: 20px;
+}
+
+.ltwarp_info{
+    border: 1px solid red;
+    padding-top: 20px 0 0 0;
+}
+
+.ltwarp_address{
+    margin: 20px 0 0 10px;
+}
+
+.ltwarp_address span{
+    font-weight: bold;
+    margin: 3px 0 0 10px;
+}
+
+.ltwarp_address img{
+    width: 32px;
+    height: 32px;
+}
+
+.ltwarp_address p{
+    font-weight: bold;
+    font-size: 0.8rem;
+}
+
+.lbwarp_list div{
+    font-weight: bold;
+    font-size: 0.7rem;
+    margin-top: 10px;
+}
+
+.lbwarp_list div:nth-of-type(1){
+    text-align: center;
+}
+
+.group_page{
+	margin-top: -1%;
+}
