업데이트 : 카페24 호스팅. 메인뷰 처리. 메세지함 실시간 처리 구현. 게시글, 댓글 등록시 내정보 횟수가 올라가지 않는 문제 수정.

--- a/StudySiba/src/main/webapp/resources/css/main.css
+++ b/StudySiba/src/main/webapp/resources/css/main.css
@@ -87,6 +87,23 @@ ul.navbar-nav > li.nav-item {
     background-color: #fecc84;
 }
 
+.message_counter{
+	width: 30px;
+	height: 25px;
+	border-radius: 5px;
+	background-color: red;
+	z-index: 9999;
+	position: absolute;
+	top: 33px;
+	left: 622px;
+	color: white;
+	text-align: center;
+	font-weight: bold;
+	font-size: 1.1rem;
+	vertical-align: middle;
+	visibility: hidden;
+}
+
 
 /*
 **      중앙 배경 및 그림부분
@@ -506,8 +523,6 @@ ul.navbar-nav > li.nav-item {
 
 .content_meettitle {
     height: 38%;
-    background-image: url("/images/main/test3.jpg");
-    background-size: cover;
 }
 
 .content_date {
