업데이트 : width 수치 조정

--- a/StudySiba/src/main/webapp/resources/css/sub.css
+++ b/StudySiba/src/main/webapp/resources/css/sub.css
@@ -1138,8 +1138,8 @@ ul {
 }
 
 .contentgroup_groupimg img {
-    width: 80%;
-    height: 100%;
+    width: 172px;
+    height: 100px;
     margin-left: 20%;
 }
 
