--- a/StudySiba/src/main/webapp/resources/css/main.css
+++ b/StudySiba/src/main/webapp/resources/css/main.css
@@ -7,6 +7,7 @@
     padding: 0;
     font-family: 'Nanum Gothic', sans-serif;
     background-color: #f4f5f7;
+    width: 1912px;
 }
 
 .modal-nopadding {
